--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 ktor:
     application:
         modules:
-            - com.example.ApplicationKt.module
+            - ua.shvets.unit.ApplicationKt.module
     deployment:
         port: "$PORT:8080"
